Double check (event) filtered window && window list

BUG: 312990